<resources>
    <string name="app_name">Pantry - Gestão de Validade</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Início</string>
    <string name="pantry">Despensa</string>
    <string name="shopping_list_nav">Comprar</string>
    <string name="profile">Perfil</string>
    <string name="hello">Olá Name!</string>
    <string name="items_due_soon">Itens na sua despensa</string>
    <string name="shopping_list">Lista de Compras</string>
    <string name="see_more">Ver mais...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="due_date">Validade</string>
    <string name="date_default">00/00</string>
    <string name="name_item_default">Nome Item</string>
    <string name="my_pantry">Minha despensa</string>
    <string name="my_shopping_list">Minha lista de compras</string>
    <string name="my_data">Meus dados</string>
    <string name="configuration">Configurações</string>
    <string name="help">Ajuda</string>
    <string name="sugestion">Sugestões</string>
    <string name="enter">Entrar</string>
    <string name="continue_google">Continuar com o Google</string>
    <string name="continue_facebook">Continuar com o Facebook</string>
    <string name="continue_email">Continuar com Email e Senha</string>
    <string name="first_time_here">Primeira vez aqui?</string>
    <string name="register">Cadastre-se</string>
    <string name="register_title">Cadastro</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="register_button">Cadastrar</string>
    <string name="fill_manually">Preencher manualmente</string>
    <string name="point_the_camera">Aponte a camera para o código de barras do item</string>
    <string name="wait">Carregando dados do item.\nAguarde...</string>
    <string name="add_item">Adicionar item</string>
    <string name="product">Produto</string>
    <string name="date_placeholder">00/00/0000</string>
    <string name="save">Salvar</string>
    <string name="click">Clique para escolher...</string>
    <string name="quantity_placeholder">1</string>
    <string name="logout">Sair</string>
    <string name="description">Descrição</string>
    <string name="quantity">Quantidade</string>
    <string name="about">Sobre</string>
    <string name="text_delete_shopping_item_configuration">Ao dar \'check\' em item da lista de compras remover automaticamente</string>
    <string name="number_days_due_date_configuration">Quantidade de dias antes de vencer que deve destacar o item</string>
    <string name="enable_flash_configuration">Ligar lanterna ao ler código de barras</string>
    <string name="dark_mode">Modo escuro</string>

    <string-array name="array_due_days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>