<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo_red" />

    <TextView
        android:id="@+id/text_enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_logo"
        android:layout_marginTop="24dp"
        android:text="@string/enter"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/text_black"/>


    <TextView
        android:id="@+id/text_continue_google"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_enter"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:background="@drawable/shape_rounded_button_red"
        android:text="@string/continue_google"
        android:textSize="20sp"
        android:textColor="@color/text_white"/>

    <TextView
        android:id="@+id/text_continue_facebook"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_continue_google"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:background="@drawable/shape_rounded_button_blue"
        android:text="@string/continue_facebook"
        android:textSize="20sp"
        android:textColor="@color/text_white"/>

    <TextView
        android:id="@+id/text_continue_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_continue_facebook"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:background="@drawable/shape_rounded_button_gray"
        android:text="@string/continue_email"
        android:textSize="20sp"
        android:textColor="@color/text_white"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_register"
        android:layout_marginBottom="8dp"
        android:text="@string/first_time_here"
        android:textColor="@color/text_gray"
        android:textSize="18sp"
        android:textAlignment="center"/>
    
    <TextView
        android:id="@+id/text_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:background="@drawable/shape_rounded_button_green"
        android:text="@string/register"
        android:textSize="25sp"
        android:textAllCaps="true"
        android:textColor="@color/text_white"/>

</androidx.constraintlayout.widget.ConstraintLayout>