<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.ProfileFragment">

    <TextView
        android:id="@+id/text_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/profile"
        android:textColor="@color/text_gray"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/text_my_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_hello"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/my_data"
        android:textSize="23sp"
        android:textColor="@color/text_gray" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_my_data"
        android:layout_marginHorizontal="10dp"
        android:background="@color/background_gray"/>

    <TextView
        android:id="@+id/text_configuration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_my_data"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/configuration"
        android:textSize="23sp"
        android:textColor="@color/text_gray" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_configuration"
        android:layout_marginHorizontal="10dp"
        android:background="@color/background_gray"/>

    <TextView
        android:id="@+id/text_help"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_configuration"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/help"
        android:textSize="23sp"
        android:textColor="@color/text_gray" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_help"
        android:layout_marginHorizontal="10dp"
        android:background="@color/background_gray"/>

    <TextView
        android:id="@+id/text_sugestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_help"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/sugestion"
        android:textSize="23sp"
        android:textColor="@color/text_gray" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_sugestion"
        android:layout_marginHorizontal="10dp"
        android:background="@color/background_gray" />

</androidx.constraintlayout.widget.ConstraintLayout>