<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    tools:context=".ui.activity.PantryFormActivity">

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/text_add_item"
        app:layout_constraintBottom_toBottomOf="@id/text_add_item"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_back"
        app:tint="@color/icon_gray" />

    <TextView
        android:id="@+id/text_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/image_back"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_item"
        android:textColor="@color/text_gray"
        android:textSize="25sp"/>

    <ProgressBar
        android:id="@+id/progress_item"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_add_item"
        android:layout_marginTop="16dp"
        android:indeterminateTint="@color/text_red"/>

    <TextView
        android:id="@+id/text_wait"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_item"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="8dp"
        android:text="@string/wait"
        android:textColor="@color/text_red"
        android:textSize="18sp"
        android:textAlignment="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_add_item"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_description"
        android:hint="@string/product">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textfield_product"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="47dp"
        android:text="@string/due_date"
        android:textSize="12sp"
        android:textColor="@color/text_dark"/>

    <ImageView
        android:id="@+id/image_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_due_date"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="42dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/ic_date"
        app:tint="@color/text_dark" />

    <TextView
        android:id="@+id/text_due_date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/image_date"
        app:layout_constraintTop_toTopOf="@id/image_date"
        app:layout_constraintBottom_toBottomOf="@id/image_date"
        android:layout_marginStart="40dp"
        android:text="@string/click"
        android:textSize="17sp"
        android:textColor="@color/text_dark"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_rounded_button_green">

        <TextView
            android:id="@+id/text_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/text_white"
            android:textSize="25sp" />

        <ProgressBar
            android:id="@+id/progress_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="8dp"
            android:indeterminateTint="@color/white"
            android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>