<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rounded_gray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="4dp">

    <LinearLayout
        android:id="@+id/linear_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingVertical="5dp"
        android:paddingHorizontal="8dp"
        android:background="@drawable/shape_rounded_dark_gray"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            android:textColor="@color/text_dark_gray"
            android:textSize="10sp"
            android:textAlignment="center"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_default"
            android:textColor="@color/text_dark_gray"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textAllCaps="true" />

    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/linear_due_date"
        app:layout_constraintRight_toLeftOf="@id/image_delete"
        android:layout_marginStart="5dp"
        android:text="@string/name_item_default"
        android:textColor="@color/text_dark_gray"
        android:gravity="center_vertical"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/image_delete"
        android:layout_width="50dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/shape_rounded_red"
        android:src="@drawable/ic_delete"
        android:scaleType="center"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>