<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.UserDataActivity">

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/text_add_item"
        app:layout_constraintBottom_toBottomOf="@id/text_add_item"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_back"
        app:tint="@color/icon_gray" />

    <TextView
        android:id="@+id/text_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/image_back"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/configuration"
        android:textColor="@color/text_gray"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/text_flash"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_add_item"
        app:layout_constraintRight_toLeftOf="@id/switch_flash"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/enable_flash_configuration"
        android:textSize="18sp"
        android:textColor="@color/text_gray" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_flash"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/text_flash"
        app:layout_constraintBottom_toBottomOf="@id/text_flash"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_days_due"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_flash"
        app:layout_constraintRight_toLeftOf="@id/spinner_days_due"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/number_days_due_date_configuration"
        android:textSize="18sp"
        android:textColor="@color/text_gray" />

    <Spinner
        android:id="@+id/spinner_days_due"
        android:layout_width="100dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/text_days_due"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_days_due"
        app:layout_constraintBottom_toBottomOf="@id/text_days_due"
        android:entries="@array/array_due_days" />

    <TextView
        android:id="@+id/text_shopping_item_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_days_due"
        app:layout_constraintRight_toLeftOf="@id/switch_shopping_item_delete"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/text_delete_shopping_item_configuration"
        android:textSize="18sp"
        android:textColor="@color/text_gray" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_shopping_item_delete"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/text_shopping_item_delete"
        app:layout_constraintBottom_toBottomOf="@id/text_shopping_item_delete"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>